# Project2

./: .gitignore  CMakeLists.txt  Makefile  a.out  compile.py  readme.md  test
assets/: candy.txt  characters.txt  end.txt  intro.txt
include/: board.h  candy.h  colours.h  player.h  riddle.h  store.h  treasure.h
src/: main.cpp
src/modules/: board.cpp  player.cpp  store.cpp  treasure.cpp
tests/: argsTest.py  createDir.cpp  skeleton.cpp  test.cpp  test2  test2.cpp
